--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ xgboost>=1.5.0
 joblib>=1.0.0
 matplotlib>=3.4.0
 seaborn>=0.11.0
+langchain>=0.0.300
+openai>=0.28.0
+python-dotenv>=1.0.0
+google-search-results>=2.4.2
